Fixing mobile link alignment

--- a/css/main.css
+++ b/css/main.css
@@ -539,7 +539,7 @@ textarea {
 		margin: 0;
 		padding: 0;
 		position: relative;
-		width: 25%;
+		width: 33.33%;
 	}
 	nav li a {
 		left: 50%;
